# data_pop

./: __init__.py  nokia_devices.csv  pyproject.toml  supported_devices.csv  supported_devices.yml
jobs/: __init__.py  location_creation.py  state_abbreviations.py
onboarding_command_mappers/: nokia_srl.yml
