[tool.poetry]
name = "data-pop"
version = "0.1.0"
description = ""
authors = ["Carlos Huaccho <Carlos@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
nautobot = "2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
